templates/acquia-docs_template.yaml
---
# Source: acquia-docs/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: SET_IN_DEPLOYMENT_REPO
---
# Source: acquia-docs/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name
  namespace: SET_IN_DEPLOYMENT_REPO
  labels:
    tier: backend
    app.kubernetes.io/name: release-name
spec:
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
  selector:
    app: release-name
---
# Source: acquia-docs/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name
  namespace: SET_IN_DEPLOYMENT_REPO
spec:
  replicas: 1
  selector:
    matchLabels:
      app: release-name
  template:
    metadata:
      labels:
        app: release-name
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: release-name
        image: "626007623524.dkr.ecr.us-east-2.amazonaws.com/SET_IN_DEPLOYMENT_REPO:SET_IN_DEPLOYMENT_REPO"
        ports:
        - containerPort: 80
---
# Source: acquia-docs/templates/ingress.yaml
apiVersion: 
kind: Ingress
metadata:
    name: release-name
    namespace: SET_IN_DEPLOYMENT_REPO
    annotations:
      cert-manager.io/cluster-issuer: "letsencrypt-staging"
      nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
    ingressClassName: nginx-internal
    tls:
    - hosts:
      - acquia-docs.SET_IN_DEPLOYMENT_REPO
      - acquia-docs-.SET_IN_DEPLOYMENT_REPO
      - acquia-docs--SET_IN_SRE_CLUSTER_CONFIG_REPO.SET_IN_DEPLOYMENT_REPO
      secretName: "release-name-tls"
    rules:
    - host: acquia-docs-.SET_IN_DEPLOYMENT_REPO
      http:
        paths:
        
        - backend:
            serviceName: release-name
            servicePort: 80
          path: /
        
    - host: acquia-docs--SET_IN_SRE_CLUSTER_CONFIG_REPO.SET_IN_DEPLOYMENT_REPO
      http:
        paths:
        
        - backend:
            serviceName: release-name
            servicePort: 80
          path: /
        
    - host: acquia-docs.SET_IN_DEPLOYMENT_REPO
      http:
        paths:
        
        - backend:
            serviceName: release-name
            servicePort: 80
          path: /
